@@ -1,3 +1,12 @@
+2006-01-19  Daniel Steffen  <das@users.sourceforge.net>
+
+	* unix/tcl.m4: ensure CPPFLAGS env var is used when set. [Bug 1586861]
+	(Darwin): add -isysroot and -mmacosx-version-min flags to CPPFLAGS when
+	present in CFLAGS to avoid discrepancies between what headers configure
+	sees during preprocessing tests and compiling tests.
+
+	* unix/configure: autoconf-2.13
+
 2006-12-22  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
 
 	* unix/tkUnixEvent.c (TkUnixDoOneXEvent): Made correct on AMD64 and
